[tool.poetry]
name = "medicalshopbackend"
version = "0.1.0"
description = ""
authors = ["Nihalrs <nihalravindra317@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mysql-connector-python = "^9.0.0"
flask = "^3.0.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
